Envoy/envoy-config.yml
admin:
  address:
    socket_address: { address: 127.0.0.1, port_value: 9901 }

static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 10000 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          codec_type: AUTO
          route_config:
            name: local_route
            virtual_hosts:
            - name: backend
              domains: ["*"]
              routes:
              - match: { prefix: "/c/" }
                route: { prefix_rewrite: "/", cluster: car_service_cluster }
              - match: { prefix: "/p/" }
                route: { prefix_rewrite: "/", cluster: person_service_cluster }
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              http_service:
                path_prefix: /authz?url=        # without this auth does not work with prefix_rewrite
                server_uri:
                  uri: authservice              # required but ignored
                  cluster: auth_service_cluster
                  timeout: 5s                   # for debugging instead of 0.25s
                authorization_response:
                  allowed_client_headers_on_success:
                    patterns:
                    - exact: x-current-user
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: auth_service_cluster
    connect_timeout: 10s # for debugging instead of 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: auth_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: authservice    # docker-compose service ref
                port_value: 80          # internal container port

  - name: car_service_cluster
    connect_timeout: 10s # for debugging instead of 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: car_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: carservice # docker-compose service ref
                port_value: 80      # internal container port

  - name: person_service_cluster
    connect_timeout: 10s # for debugging instead of 0.25s
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: person_service_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: personservice  # docker-compose service ref
                port_value: 80          # internal container port
